# dora

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  README.md  basic.yaml  config.yaml  config_schema.json  dora.service  example.yaml  flake.nix  justfile  package.nix  shell.nix
.cargo/: config.toml
.github/actions-rs/: grcov.yml
.github/workflows/: actions.yml  issue-triage.yml  pr-review.yml
.github/workflows/actions-rs/: grcov.yml
.sqlx/: query-47c078186e966aa9ce236a2e0e54edf870cf6cbca6fbb20eb0896675be9347f3.json  query-793f1692b36d96a6815c6bfb21d5de88c4f64c020af406405a2ed8c9535ffff3.json  query-7a75f6b16faff6ed52e5d49bf639d27e8cbabd72922a6ecebecddc5810ad5e2d.json  query-882703a86e74138d6b6f7e58219890fbf40508e6212ba0aa6e507b1f1c9ad1f4.json  query-a9016b83146975088fb6d81b9e9f279cd5f8f697a3720e4a0a9394ecb91a0a5e.json  query-ac1e7d2c911b8205f797601c1106d8dd455ad37d7805bb5e708cc389fef971e2.json  query-adbd99769bd732ad04fbe219c0b4867094f50d3febba9e8342153afb3f1d0bf7.json  query-aef8d003e1661e7b3ea3a74535cfb94451e91e6a3af65c2fb452cc56a512ac0d.json  query-b2234ad91400eac3cc40103cde969bb8acb66cd866a25515815c187d2b959c52.json  query-d69709c14c3d5077d08ee45219811df9460eb5ba305097440d953a3c69edcdc0.json  query-d936276b3e7ea7fd4e26597791388e43779d3b87835573709227673ab8d49847.json  query-f142683f0ea01af776e17015553be7f6b0b49e030f954bd1a80a38a8de72147d.json
ddns-test/: Cargo.toml  ddns.json
ddns-test/src/: main.rs
debian/: BUILD.md  README.Debian  changelog  control  copyright  postinst  prerm  rules
docs/: CLEANUP_RESULTS.md  DOCKER_RESOURCES.md  WORKFLOWS.md  cluster.md  creating_plugin.md  ddns.md  docker.md  gns3.md  pi_setup.md
dora-cfg/: Cargo.toml  README.md
dora-cfg/src/: main.rs
dora-core/: Cargo.toml
dora-core/src/: config.rs  env.rs  handler.rs  lib.rs  metrics.rs  prelude.rs
dora-core/src/server/: context.rs  ioctl.rs  mod.rs  msg.rs  shutdown.rs  state.rs  topo_sort.rs  typemap.rs  udp.rs
external-api/: Cargo.toml
external-api/src/: lib.rs
libs/client-classification/: Cargo.toml  README.md
libs/client-classification/benches/: my_benchmark.rs
libs/client-classification/src/: ast.rs  grammar.pest  lib.rs
libs/client-protection/: Cargo.toml
libs/client-protection/src/: lib.rs
libs/client_classification/: Cargo.toml
libs/client_classification/benches/: my_benchmark.rs
libs/client_classification/src/: ast.rs  grammar.pest  lib.rs
libs/config/: Cargo.toml
libs/config/sample/: circular_deps.yaml  config.yaml  config_v4.json  config_v4_simple.json  config_v6.yaml  config_v6_EN.yaml  config_v6_LL.yaml  config_v6_UUID.yaml  config_v6_no_persist.yaml  long_opts.yaml
libs/config/src/: client_classes.rs  lib.rs  v4.rs  v6.rs
libs/config/src/wire/: client_classes.rs  mod.rs  v4.rs  v6.rs
libs/ddns/: Cargo.toml
libs/ddns/examples/: tsig.conf  tsig.raw  tsig.rs
libs/ddns/src/: dhcid.rs  lib.rs  update.rs
libs/discovery/: Cargo.toml
libs/discovery/src/: lib.rs
libs/env-parser/: Cargo.toml
libs/env-parser/src/: lib.rs
libs/icmp-ping/: Cargo.toml
libs/icmp-ping/examples/: simple.rs
libs/icmp-ping/src/: errors.rs  icmp.rs  lib.rs  shutdown.rs  socket.rs
libs/ip-manager/: Cargo.toml  README.md  sqlx-data.json
libs/ip-manager/src/: lib.rs  memory.rs  sqlite.rs
libs/nats-coordination/: Cargo.toml
libs/nats-coordination/src/: client.rs  error.rs  host_options.rs  lease.rs  lib.rs  models.rs  subjects.rs
libs/register_derive/: Cargo.toml  README.md
libs/register_derive/src/: lib.rs
libs/register_derive_impl/: Cargo.toml
libs/register_derive_impl/src/: lib.rs
libs/topo_sort/: Cargo.toml
libs/topo_sort/src/: lib.rs
migrations/: 20210824204854_initial.sql
modules/: README.md  config.nix  default.nix  options.nix
nix/: format-matrix-results.py
nix/tests/: dhcp-client-matrix.nix  dhcp-nats-jetstream-load.nix
nix/tests/clients/: default.nix  dhcp-loadtest.nix  dhcpcd.nix  dhcping.nix  dhcpm.nix  perfdhcp.nix  systemd-networkd.nix  udhcpc.nix
nix/tests/lib/: client-node.nix  default.nix  dora-config.nix  server-node.nix  test-script-helpers.py
plugins/leases/: Cargo.toml
plugins/leases/src/: lib.rs  metrics.rs  v6.rs
plugins/message-type/: Cargo.toml
plugins/message-type/src/: lib.rs
plugins/nats-host-options/: Cargo.toml
plugins/nats-host-options/src/: lib.rs
plugins/nats-leases/: Cargo.toml
plugins/nats-leases/src/: backend.rs  lib.rs  metrics.rs  nats_backend.rs  v4.rs  v6.rs
plugins/static-addr/: Cargo.toml
plugins/static-addr/src/: lib.rs
scripts/: docker-cleanup.sh  free-space-now.sh  test-ci.sh  test-workflows.sh
setup/: Dockerfile.act  GITHUB_ACTIONS_LOCAL.md  ISSUE_TRIAGE.md  PR_REVIEW.md  README.md  install-packages-to-mnt.sh  setup-act.sh  setup-issue-triage.sh
tools/dhcp-loadtest/: Cargo.toml  README.md
tools/dhcp-loadtest/src/: config.rs  engine.rs  identity.rs  lib.rs  main.rs  report.rs  validation.rs
tools/dhcp-loadtest/src/protocols/: mod.rs  v4.rs  v6.rs
tools/dhcp-loadtest/src/transport/: mod.rs  udp_v4.rs  udp_v6.rs
tools/dhcp-loadtest/tests/: smoke.rs
util/: entrypoint.sh
