[package]
name = "dora-core"
version = "0.1.0"
edition = "2024"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
description = "dora is a DHCP server written from the ground up in Rust"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
env-parser = { path = "../libs/env-parser" }
topo_sort = { path = "../libs/topo_sort" }
# third party
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = "0.4"
chrono-tz = "0.6"
dhcproto = { workspace = true }
futures = { workspace = true }
lazy_static = "1.5"
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
trust-dns-proto = { workspace = true }
pin-project = "1.1"
prometheus = { workspace = true }
prometheus-static-metric = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
socket2 = { workspace = true }
libc = "0.2.177"
unix-udp-sock = "0.8.0"
pnet = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.4"
