[package]
name = "external-api"
version = "0.1.0"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../dora-core" }

# libs
anyhow = { workspace = true }
axum = "0.4.8"
tokio = { workspace = true }
tracing-futures = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }


[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
