[package]
name = "external-api"
version = "0.1.0"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../dora-core" }
ip-manager = { path = "../libs/ip-manager" }

# libs
anyhow = { workspace = true }
axum = "0.7.5"
tokio = { workspace = true }
tracing-futures = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }


[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
