[package]
name = "config"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
ipnet = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = "0.4"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
rustls-pki-types = { workspace = true }
url = "2"

dora-core = { path = "../../dora-core" }
client-classification = { path = "../client-classification" }
topo_sort = { path = "../topo_sort" }
