[package]
name = "ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../../dora-core" }
config = { path = "../config" }
trust-dns-client = { version = "0.22.0", features = ["dnssec-ring"] } 
thiserror = { workspace = true }
ring = "0.16.20"
hex = "0.4"
rand = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
base64 = "0.20"

[[example]]
name = "tsig"
path = "examples/tsig.rs"
