[package]
name = "ddns"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../../dora-core" }
config = { path = "../config" }
base64 = { workspace = true }
hickory-proto = { workspace = true }
thiserror = { workspace = true }
ring = "0.16.20"
hex = "0.4"
rand = { workspace = true }


[[example]]
name = "tsig"
path = "examples/tsig.rs"
