[package]
name = "icmp-ping"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
socket2 = { workspace = true }
tokio = { workspace = true, features = ["time", "net", "sync", "macros"] }
parking_lot = "0.12"
pnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dora-core = { path = "../../dora-core" }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = "0.3"
tracing-test = "0.2.5"
