[package]
name = "register_derive_impl"
version = "0.1.0"
authors = ["Bluecat Networks <support@bluecatnetworks.com>"]
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1"

# dora
dora-core = { path = "../../dora-core" }

[lib]
proc-macro = true
