[package]
name = "leases"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../../dora-core" }
config = { path = "../../libs/config" }
client-protection = { path = "../../libs/client-protection" }

static-addr = { path = "../static-addr" }
message-type = { path = "../message-type" }

register_derive = { path = "../../libs/register_derive" }
ip-manager = { path = "../../libs/ip-manager" }
ddns = { path = "../../libs/ddns" }

ipnet = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tracing-test = { workspace = true }
