[package]
name = "message-type"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../../dora-core" }
register_derive = { path = "../../libs/register_derive" }
config = { path = "../../libs/config" }
client-protection = { path = "../../libs/client-protection" }

[dev-dependencies]
serde_yaml = { workspace = true }
tracing-test = "0.2.4"
