[package]
name = "nats-leases"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Independent NATS-backed DHCP lease plugins built on shared leases code"

[dependencies]
dora-core = { path = "../../dora-core" }
config = { path = "../../libs/config" }
leases = { path = "../leases" }
nats-coordination = { path = "../../libs/nats-coordination" }
ip-manager = { path = "../../libs/ip-manager" }

async-trait = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }

chrono = "0.4"
hex = "0.4"
lazy_static = "1.4"
parking_lot = "0.12"
siphasher = "1"
uuid = { version = "1", features = ["v4"] }
