[package]
name = "static-addr"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-core = { path = "../../dora-core" }
config = { path = "../../libs/config" }
tracing = { workspace = true }

register_derive = { path = "../../libs/register_derive" }
message-type = { path = "../message-type" }

[dev-dependencies]
serde_yaml = { workspace = true }
tracing-test = "0.2.5"
hex = "0.4"
