[package]
name = "dhcp-loadtest"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dhcproto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
